fixed landing page spacing

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -5,7 +5,7 @@ $bg-1: #dbe2ef;
 $bg-2: #f9f7f7;
 
 .hero {
-  padding-top: 15rem;
+  padding-top: 12rem;
   display: flex;
   height: 105vh;
   width: 100%;
@@ -53,7 +53,7 @@ $bg-2: #f9f7f7;
   .hero {
     flex-direction: column;
     margin-top: 1rem;
-    padding: 12rem 2rem 0rem 2rem;
+    padding: 7rem 2rem 0rem 2rem;
     button {
       width: 100%;
     }
